--- a/PracticasSpringBoot-master/src/main/resources/application.properties
+++ b/PracticasSpringBoot-master/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 #implementacion.persona=generales
 #implementacion.persona=pro
-
-
 #server.error.include-stacktrace=never
 #server.error.include-exception=false
 #server.error.whitelabel.enabled=false
+#Datasource configuration
+spring.datasource.url=jdbc:postgresql://localhost:5433/biblioteca
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.datasource.initialization-mode=always
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create
